Latest FitNesse with Nashorn on Java 11